--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <br />
     <img src="./assets/images/movie-ranking.png" height="200" />
     <br />
-    <a href="./public/abt.html">about me</a>
+    <a href="./public/about.html">about me</a>
     <br />
-    <a href="./public/cnt.html">contact me</a>
+    <a href="./public/conact.html">contact me</a>
   </body>
 </html>
