--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <br />
     <a href="./public/about.html">about me</a>
     <br />
-    <a href="./public/conact.html">contact me</a>
+    <a href="./public/contact.html">contact me</a>
   </body>
 </html>
