--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br />
     <img src="./assets/images/birthday-invite.png" height="200" />
     <br />
-    <a href="./public/movie-ranking.html">clickk here</a>
+    <a href="./public/movie-ranking.html">clickk herex</a>
     <br />
     <img src="./assets/images/movie-ranking.png" height="200" />
     <br />
